# delta-rs-benchmarking

./: # Best-in-Class Benchmark Suite and Auto.md  # Research Prompt: Design and Build a Be.md  .gitignore  Below is a **complete, production-qualit.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: CODEOWNERS  actionlint.yaml  dependabot.yml
.github/workflows/: benchmark-nightly.yml  benchmark-prerelease.yml  benchmark.yml  ci.yml  docs-quality.yml  longitudinal-nightly.yml  longitudinal-release-history.yml
backends/: s3_locking_vultr.env
bench/evidence/: registry.yaml
bench/manifests/: core_python.yaml  core_rust.yaml  p0-python.yaml  p0-rust.yaml
crates/delta-bench/: Cargo.toml  Cargo.toml.delta-rs
crates/delta-bench/benches/: file_selection_bench.rs  merge_filter_bench.rs  metadata_log_bench.rs  metadata_replay_bench.rs  scan_phase_bench.rs  scan_replay_bench.rs
crates/delta-bench/src/: assertions.rs  cli.rs  error.rs  file_selection_bench_support.rs  fingerprint.rs  lib.rs  main.rs  manifests.rs  merge_bench_support.rs  metadata_bench_support.rs  replay_snapshot.rs  results.rs  scan_replay_support.rs  stats.rs  storage.rs  system.rs  validation.rs  version_compat.rs
crates/delta-bench/src/data/: datasets.rs  fixtures.rs  generator.rs  mod.rs
crates/delta-bench/src/runner/: mod.rs
crates/delta-bench/src/suites/: concurrency.rs  delete_update.rs  delete_update_dml.rs  delete_update_perf.rs  interop_py.rs  merge.rs  merge_dml.rs  merge_perf.rs  metadata.rs  metadata_perf.rs  mod.rs  optimize_perf.rs  optimize_vacuum.rs  read_scan.rs  scan.rs  scan_metrics.rs  write.rs  write_perf.rs
crates/delta-bench/src/suites/tpcds/: catalog.rs  mod.rs  registration.rs  sql_loader.rs
crates/delta-bench/src/suites/tpcds/sql/: q03.sql  q07.sql  q64.sql
crates/delta-bench/tests/: assertions.rs  backend_profile.rs  cli_new_selectors.rs  cli_storage.rs  cli_validation.rs  concurrency_smoke.rs  delete_update_dml_smoke.rs  delete_update_perf_smoke.rs  delete_update_smoke.rs  determinism.rs  execution_planning.rs  failure_paths.rs  fidelity_context.rs  file_selection_bench_contract.rs  fingerprint.rs  fixtures_generation.rs  hash_regressions.rs  interop_py.rs  manifests.rs  merge_bench_support.rs  merge_perf_smoke.rs  merge_ported_cases.rs  metadata_bench_support.rs  metadata_perf_smoke.rs  metadata_replay_bench_contract.rs  metrics_normalization.rs  optimize_perf_smoke.rs  perf_profile_contract.rs  real_ops.rs  result_schema_compat.rs  runner_timing.rs  sample_metrics_helpers.rs  scan_phase_canary.rs  scan_replay_support.rs  smoke_e2e.rs  storage_config.rs  suite_registry.rs  support_env_lock.rs  symlink_safety.rs  system_paths.rs  (+6 more)
crates/delta-bench/tests/support/: env_lock.rs  env_vars.rs  tpcds_fixture.rs
docs/: architecture.md  cloud-runner.md  comparing-branches.md  getting-started.md  longitudinal-cli.md  longitudinal-runbook.md  longitudinal.md  reference.md  security-runner.md  security-vultr-wave1.md  user-guide.md  validation.md
python/: pyproject.toml  requirements-audit.txt
python/delta_bench_compare/: aggregate.py  bot_state.py  compare.py  formatting.py  hash_policy.py  manifest.py  model.py  pack.py  registry.py  schema.py  terminal.py
python/delta_bench_interop/: __init__.py  run_case.py
python/delta_bench_longitudinal/: __init__.py  artifacts.py  cli.py  matrix_runner.py  reporting.py  retention.py  revisions.py  store.py
python/delta_bench_tpcds/: __init__.py  generate_store_sales_csv.py
python/tests/: test_benchmark_automation_hardening.py  test_bot_state.py  test_compare.py  test_compare_branch_fail_fast.py  test_docs_contract.py  test_hash_policy.py  test_longitudinal_artifacts.py  test_longitudinal_e2e_smoke.py  test_longitudinal_matrix_runner.py  test_longitudinal_reporting.py  test_longitudinal_retention.py  test_longitudinal_revisions.py  test_longitudinal_store.py  test_longitudinal_workflow.py  test_methodology_profile_schema.py  test_pack.py  test_run_profile.py  test_security_scripts.py  test_tpcds_generator.py
python/tests/fixtures/: label_contract.json
scripts/: bench.sh  cleanup_local.sh  compare_branch.sh  docs_check.sh  longitudinal_bench.sh  prepare_delta_rs.sh  provision_runner.sh  provision_vultr.sh  publish_contract.sh  run_actionlint.sh  run_profile.sh  security_check.sh  security_mode.sh  sync_harness_to_delta_rs.sh  update_release_history_manifests.sh  validate_perf_harness.sh  vm_info.sh
(+37 files in other folders)
