[workspace]
members = ["crates/delta-bench"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs"] }
clap = { version = "4.5", features = ["derive", "env"] }
rand = "0.10"
rand_chacha = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
url = "2"
sha2 = "0.10"
serde_yaml = "0.9"
