[package]
name = "delta-bench"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
deltalake-core = { version = "0.31.1", features = ["datafusion", "cloud"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
tempfile = { workspace = true }
sha2 = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = "0.8"

[[bench]]
name = "scan_phase_bench"
harness = false
