[package]
name = "delta-bench"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
deltalake-core = { version = "0.31.1", features = ["datafusion", "cloud"] }
bytes = "1"
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
tempfile = { workspace = true }
sha2 = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = "0.5"

[[bench]]
name = "scan_phase_bench"
harness = false

[[bench]]
name = "scan_replay_bench"
harness = false

[[bench]]
name = "metadata_replay_bench"
harness = false

[[bench]]
name = "metadata_log_bench"
harness = false
