[package]
name = "delta-bench"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Pin to the upstream bench-support bridge until a crates.io release includes it.
# Keep `.delta-rs-under-test` synced to this bridge revision or a released equivalent.
deltalake-core = { git = "https://github.com/delta-io/delta-rs.git", rev = "b1cb1388f35f2700616021cbe49120a82f90e2fe", features = ["datafusion", "cloud"] }
bytes = "1"
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
tempfile = { workspace = true }
sha2 = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = "0.5"

[[bench]]
name = "scan_phase_bench"
harness = false

[[bench]]
name = "scan_replay_bench"
harness = false

[[bench]]
name = "metadata_replay_bench"
harness = false

[[bench]]
name = "metadata_log_bench"
harness = false

[[bench]]
name = "file_selection_bench"
harness = false
